# IVP-Mini-Project-Group-21

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
analysis/: compute_quality.m
mmagic/: Dockerfile
supaserver/: Dockerfile  docker-compose.yml  run_video_inferer  supaserver.py
