[tool.poetry]
name = "suparezz"
version = "0.1.0"
description = ""
authors = ["Rishvic Pushpakaran <rishvic@gmail.com>"]
readme = "README.md"
packages = [{include = "suparezz", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
