[tool.poetry]
name = "suparezz"
version = "0.1.0"
description = ""
authors = ["Rishvic Pushpakaran <rishvic@gmail.com>"]
readme = "README.md"
packages = [{ include = "suparezz", from = "src" }]

[tool.poetry.scripts]
base_gui = "scripts.base_gui:main"
cgui = "scripts.cgui:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "^6.7.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
